--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="eca562">  <td>18/06/01 18:04:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InfoSummary.meterCount()[pri:0, instance:com.test.suit.discover.InfoSummary@212b5695]">meterCount</td> 
-  <td>main@1523553211</td>   <td></td> </tr>
+<tr bgcolor="eca562">  <td>18/06/04 19:09:33</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;InfoSummary.setInfo()[pri:0, instance:com.test.suit.discover.InfoSummary@7ea9e1e2]">&gt;&gt;setInfo</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1912960603</td>   <td></td> </tr>
+<tr bgcolor="eca562">  <td>18/06/04 19:09:41</td>   <td>8568</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InfoSummary.noareaCount()[pri:0, instance:com.test.suit.discover.InfoSummary@7ea9e1e2]">noareaCount</td> 
+  <td>main@1912960603</td>   <td></td> </tr>
+<tr bgcolor="eca562">  <td>18/06/04 19:09:41</td>   <td>8578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InfoSummary.rbalarm_Count()[pri:0, instance:com.test.suit.discover.InfoSummary@7ea9e1e2]">rbalarm_Count</td> 
+  <td>main@1912960603</td>   <td></td> </tr>
+<tr bgcolor="eca562">  <td>18/06/04 19:09:41</td>   <td>8583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InfoSummary.rbmeterCount()[pri:0, instance:com.test.suit.discover.InfoSummary@7ea9e1e2]">rbmeterCount</td> 
+  <td>main@1912960603</td>   <td></td> </tr>
+<tr bgcolor="eca562">  <td>18/06/04 19:09:41</td>   <td>8585</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InfoSummary.rmalarm_Count()[pri:0, instance:com.test.suit.discover.InfoSummary@7ea9e1e2]">rmalarm_Count</td> 
+  <td>main@1912960603</td>   <td></td> </tr>
+<tr bgcolor="eca562">  <td>18/06/04 19:09:42</td>   <td>8591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InfoSummary.rmmeterCount()[pri:0, instance:com.test.suit.discover.InfoSummary@7ea9e1e2]">rmmeterCount</td> 
+  <td>main@1912960603</td>   <td></td> </tr>
 </table>
