--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="eca562">  <td>18/06/04 19:09:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InfoSummary.noareaCount()[pri:0, instance:com.test.suit.discover.InfoSummary@7ea9e1e2]">noareaCount</td> 
-  <td>main@1912960603</td>   <td></td> </tr>
-<tr bgcolor="eca562">  <td>18/06/04 19:09:41</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InfoSummary.rbalarm_Count()[pri:0, instance:com.test.suit.discover.InfoSummary@7ea9e1e2]">rbalarm_Count</td> 
-  <td>main@1912960603</td>   <td></td> </tr>
-<tr bgcolor="eca562">  <td>18/06/04 19:09:41</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InfoSummary.rbmeterCount()[pri:0, instance:com.test.suit.discover.InfoSummary@7ea9e1e2]">rbmeterCount</td> 
-  <td>main@1912960603</td>   <td></td> </tr>
-<tr bgcolor="eca562">  <td>18/06/04 19:09:41</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InfoSummary.rmalarm_Count()[pri:0, instance:com.test.suit.discover.InfoSummary@7ea9e1e2]">rmalarm_Count</td> 
-  <td>main@1912960603</td>   <td></td> </tr>
-<tr bgcolor="eca562">  <td>18/06/04 19:09:42</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InfoSummary.rmmeterCount()[pri:0, instance:com.test.suit.discover.InfoSummary@7ea9e1e2]">rmmeterCount</td> 
-  <td>main@1912960603</td>   <td></td> </tr>
-<tr bgcolor="eca562">  <td>18/06/04 19:09:33</td>   <td>-8568</td> <td>&nbsp;</td><td title="&gt;&gt;InfoSummary.setInfo()[pri:0, instance:com.test.suit.discover.InfoSummary@7ea9e1e2]">&gt;&gt;setInfo</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1912960603</td>   <td></td> </tr>
+<tr bgcolor="eca562">  <td>18/06/06 19:44:14</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;InfoSummaryTests.declare()[pri:0, instance:com.test.suit.discover.InfoSummaryTests@24fcf36f]">&gt;&gt;declare</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1201173334</td>   <td></td> </tr>
+<tr bgcolor="eca562">  <td>18/06/06 19:44:19</td>   <td>4402</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InfoSummaryTests.dmaAllHPCheck()[pri:0, instance:com.test.suit.discover.InfoSummaryTests@24fcf36f]">dmaAllHPCheck</td> 
+  <td>main@1201173334</td>   <td></td> </tr>
+<tr bgcolor="eca562">  <td>18/06/06 19:44:19</td>   <td>4410</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InfoSummaryTests.dmaAllHeaders()[pri:0, instance:com.test.suit.discover.InfoSummaryTests@24fcf36f]">dmaAllHeaders</td> 
+  <td>main@1201173334</td>   <td></td> </tr>
 </table>
