--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,8 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.test.suit.discover.InfoSummaryTests.rbmeterCount</td></tr>
+<tr><td>com.test.suit.discover.InfoSummaryTests.noareaCount</td></tr>
+<tr><td>com.test.suit.discover.InfoSummaryTests.rmmeterCount</td></tr>
+<tr><td>com.test.suit.discover.InfoSummaryTests.rbalarm_Count</td></tr>
+<tr><td>com.test.suit.discover.InfoSummaryTests.rmalarm_Count</td></tr>
+<tr><td>com.test.suit.discover.InfoSummaryTests.dmaAllHP_SITE_Check</td></tr>
 </table>
