--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\jinwx.ICITY\AppData\Local\Temp\testng-eclipse-650275489\testng-customsuite.xml</span>
+                    <span>C:\Users\jinwx.ICITY\AppData\Local\Temp\testng-eclipse--640147941\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,12 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.test.suit.discover.InfoSummaryTests" hash-for-method="dmaAllHPCheck">dmaAllHPCheck</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.test.suit.discover.DeviceList_RmeterTests" hash-for-method="emList">emList</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.test.suit.discover.InfoSummaryTests" hash-for-method="dmaAllHeaders">dmaAllHeaders</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.test.suit.discover.DeviceList_RmeterTests" hash-for-method="rmList">rmList</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,21 +125,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.test.suit.discover.InfoSummaryTests</span>
+              <span class="class-name">com.test.suit.discover.DeviceList_RmeterTests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="dmaAllHPCheck">
-                  </a> <!-- dmaAllHPCheck -->
-                  <span class="method-name">dmaAllHPCheck</span>
+                  <a name="emList">
+                  </a> <!-- emList -->
+                  <span class="method-name">emList</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="dmaAllHeaders">
-                  </a> <!-- dmaAllHeaders -->
-                  <span class="method-name">dmaAllHeaders</span>
+                  <a name="rmList">
+                  </a> <!-- rmList -->
+                  <span class="method-name">rmList</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -147,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\jinwx.ICITY\AppData\Local\Temp\testng-eclipse-650275489\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\jinwx.ICITY\AppData\Local\Temp\testng-eclipse--640147941\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -156,7 +156,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.test.suit.discover.InfoSummaryTests&quot;/&gt;
+      &lt;class name=&quot;com.test.suit.discover.DeviceList_RmeterTests&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -198,18 +198,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'dmaAllHPCheck')
-data.setCell(0, 2, 'com.test.suit.discover.InfoSummaryTests')
-data.setCell(0, 3, 6);
+data.setCell(0, 1, 'emList')
+data.setCell(0, 2, 'com.test.suit.discover.DeviceList_RmeterTests')
+data.setCell(0, 3, 5);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'dmaAllHeaders')
-data.setCell(1, 2, 'com.test.suit.discover.InfoSummaryTests')
+data.setCell(1, 1, 'rmList')
+data.setCell(1, 2, 'com.test.suit.discover.DeviceList_RmeterTests')
 data.setCell(1, 3, 2);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 ms</span>
+              <span class="suite-total-time">Total running time: 7 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -224,26 +224,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">6 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">com.test.suit.discover.InfoSummaryTests</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">rbmeterCount</span>
-                <br/>
-                <span class="ignored-method-name">noareaCount</span>
-                <br/>
-                <span class="ignored-method-name">rmmeterCount</span>
-                <br/>
-                <span class="ignored-method-name">rbalarm_Count</span>
-                <br/>
-                <span class="ignored-method-name">rmalarm_Count</span>
-                <br/>
-                <span class="ignored-method-name">dmaAllHP_SITE_Check</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -252,18 +235,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.test.suit.discover.InfoSummaryTests</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.test.suit.discover.DeviceList_RmeterTests</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
-                <span class="method-name">declare</span>
+                <span class="method-name">beforeTest</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">dmaAllHPCheck</span>
-                <span class="method-start">4405 ms</span>
+                <span class="method-name">emList</span>
+                <span class="method-start">7231 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">dmaAllHeaders</span>
-                <span class="method-start">4413 ms</span>
+                <span class="method-name">rmList</span>
+                <span class="method-start">7238 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
