--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="eca562">  <td>18/06/06 19:44:14</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;InfoSummaryTests.declare()[pri:0, instance:com.test.suit.discover.InfoSummaryTests@24fcf36f]">&gt;&gt;declare</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1201173334</td>   <td></td> </tr>
-<tr bgcolor="eca562">  <td>18/06/06 19:44:19</td>   <td>4402</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InfoSummaryTests.dmaAllHPCheck()[pri:0, instance:com.test.suit.discover.InfoSummaryTests@24fcf36f]">dmaAllHPCheck</td> 
-  <td>main@1201173334</td>   <td></td> </tr>
-<tr bgcolor="eca562">  <td>18/06/06 19:44:19</td>   <td>4410</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InfoSummaryTests.dmaAllHeaders()[pri:0, instance:com.test.suit.discover.InfoSummaryTests@24fcf36f]">dmaAllHeaders</td> 
-  <td>main@1201173334</td>   <td></td> </tr>
+<tr bgcolor="a097cc">  <td>18/06/07 19:50:15</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;DeviceList_RmeterTests.beforeTest()[pri:0, instance:com.test.suit.discover.DeviceList_RmeterTests@39aeed2f]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
+<tr bgcolor="a097cc">  <td>18/06/07 19:50:22</td>   <td>7227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeviceList_RmeterTests.emList()[pri:0, instance:com.test.suit.discover.DeviceList_RmeterTests@39aeed2f]">emList</td> 
+  <td>main@1308244637</td>   <td></td> </tr>
+<tr bgcolor="a097cc">  <td>18/06/07 19:50:22</td>   <td>7234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeviceList_RmeterTests.rmList()[pri:0, instance:com.test.suit.discover.DeviceList_RmeterTests@39aeed2f]">rmList</td> 
+  <td>main@1308244637</td>   <td></td> </tr>
 </table>
