--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.test.suit.discover.DeviceList_RmeterTests.emList</td></tr>
+<tr><td>com.test.suit.discover.DeviceList_RmeterTests.treeList</td></tr>
+<tr><td>com.test.suit.discover.DeviceList_RmeterTests.rmList</td></tr>
 </table>
