--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -16,27 +16,40 @@
 <tr>
 <td>&nbsp;</td>
 <td>rbmeterCount</td>
-<td>&nbsp;</td></tr>
+<td>CountAll </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>noareaCount</td>
-<td>&nbsp;</td></tr>
+<td>CountAll </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>dmaAllHPCheck</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>rbalarm_Count</td>
+<td>dmaAllHKCheck</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>rbalarm_Count</td>
+<td>CountAll </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>rmmeterCount</td>
+<td>CountAll </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>dmaAllPTCheck</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>rmalarm_Count</td>
-<td>&nbsp;</td></tr>
+<td>CountAll </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>dmaAllHP_SITE_Check</td>
