--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,1 +1,3 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>CountAll</td><td>InfoSummaryTests.rbmeterCount()[pri:2, instance:com.test.suit.discover.InfoSummaryTests@4678c730]<br/>InfoSummaryTests.noareaCount()[pri:3, instance:com.test.suit.discover.InfoSummaryTests@4678c730]<br/>InfoSummaryTests.rmmeterCount()[pri:1, instance:com.test.suit.discover.InfoSummaryTests@4678c730]<br/></td></tr>
+</table>
