--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a097cc">  <td>18/06/12 15:17:00</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;InfoSummaryTests.declare()[pri:0, instance:com.test.suit.discover.InfoSummaryTests@724af044]">&gt;&gt;declare</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1860944798</td>   <td></td> </tr>
-<tr bgcolor="a097cc">  <td>18/06/12 15:17:17</td>   <td>16327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InfoSummaryTests.dmaAllHPCheck()[pri:0, instance:com.test.suit.discover.InfoSummaryTests@724af044]">dmaAllHPCheck</td> 
-  <td>main@1860944798</td>   <td></td> </tr>
+<tr bgcolor="a097cc">  <td>18/06/15 17:19:31</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;InfoSummaryTests.declare()[pri:0, instance:com.test.suit.discover.InfoSummaryTests@4678c730]">&gt;&gt;declare</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1179381257</td>   <td></td> </tr>
+<tr bgcolor="a097cc">  <td>18/06/15 17:19:53</td>   <td>22618</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InfoSummaryTests.beforeGroup()[pri:0, instance:com.test.suit.discover.InfoSummaryTests@4678c730]">&gt;&gt;beforeGroup</td> 
+<td>&nbsp;</td><td>&nbsp;</td>  <td>main@1179381257</td>   <td></td> </tr>
+<tr bgcolor="a097cc">  <td>18/06/15 17:19:53</td>   <td>22618</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InfoSummaryTests.rmmeterCount()[pri:1, instance:com.test.suit.discover.InfoSummaryTests@4678c730]">rmmeterCount</td> 
+  <td>main@1179381257</td>   <td></td> </tr>
+<tr bgcolor="a097cc">  <td>18/06/15 17:19:53</td>   <td>22628</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InfoSummaryTests.rbmeterCount()[pri:2, instance:com.test.suit.discover.InfoSummaryTests@4678c730]">rbmeterCount</td> 
+  <td>main@1179381257</td>   <td></td> </tr>
+<tr bgcolor="a097cc">  <td>18/06/15 17:19:53</td>   <td>22632</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InfoSummaryTests.noareaCount()[pri:3, instance:com.test.suit.discover.InfoSummaryTests@4678c730]">noareaCount</td> 
+  <td>main@1179381257</td>   <td></td> </tr>
 </table>
